Fix display of logos on IE

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,6 +9,9 @@ section.portfolio .portfolio-item {
   font-size: 17px;
   line-height: 25px;
   height: 125px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   margin: 20px 0;
   justify-content: center;
@@ -17,6 +20,9 @@ section.portfolio .portfolio-item {
 section.portfolio .portfolio-link {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +31,9 @@ section.portfolio .portfolio-item .photo {
   max-width: 360px;
   max-height: 125px;
   margin: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
 }
 section.portfolio .portfolio-item:hover .photo.gray {
@@ -34,6 +43,9 @@ section.portfolio .portfolio-item .photo.colorized {
   display: none;
 }
 section.portfolio .portfolio-item:hover .photo.colorized {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
 }
 section.portfolio .portfolio-item .photo.position-left {
